--- a/AdvancedChatOld/pom.xml
+++ b/AdvancedChatOld/pom.xml
@@ -162,17 +162,24 @@
         </dependency>
 
         <dependency>
-            <groupId>net.kyori</groupId>
-            <artifactId>adventure-api</artifactId>
-            <version>4.11.0</version>
-            <scope>compile</scope>
+            <groupId>com.github.jonagamerpro1234</groupId>
+            <artifactId>CommandAPI</artifactId>
+            <version>0.0.4-alpha</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-minimessage</artifactId>
+            <version>4.16.0</version>
+        </dependency>
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-platform-bukkit</artifactId>
-            <version>4.1.1</version>
-            <scope>compile</scope>
+            <version>4.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-api</artifactId>
+            <version>4.16.0</version>
         </dependency>
 
     </dependencies>
